# OMR

./: .gitignore  CMakeLists.txt  music.xml  test.cpp
Optical_Music_Recognition/: CMakeLists.txt
Optical_Music_Recognition/src/: staff_split.cpp
base/: CMakeLists.txt
music_recognized/: CMakeLists.txt
music_recognized/src/: staff_detect.cpp
